--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Canvas scroll example</title>
+	<meta name="viewport" content="width=device-width,user-scalable=no">
   	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	<canvas id="canvas_scroll"></canvas>
-
 	<script type="text/javascript" src="lib/canvas-scroll.js"></script>
 </body>
 </html>
